# cryptmoji

./: .gitignore  LICENSE  README.md  pyproject.toml  sonar-project.properties
.github/: FUNDING.yml
cryptmoji/: __init__.py  cli.py  data.py  main.py
docs/: _config.yml  index.md
examples/: with_key.py  without_key.py
tests/: test_cryptmoji.py
