[tool.poetry]
name = "cryptmoji"
version = "1.1.2"
description = "Encrypt Text using emojis!"
authors = ["Siddhesh Agarwal <siddhesh.agarwal@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Siddhesh-Agarwal/cryptmoji"
documentation = "https://siddhesh-agarwal.github.io/cryptmoji/"
keywords = ["encryption", "emoji", "cipher"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.1.2"]
build-backend = "poetry.core.masonry.api"
