[tool.poetry]
name = "cryptmoji"
version = "2.1.1"
description = "Encrypt Text using emojis!"
authors = ["Siddhesh Agarwal <siddhesh.agarwal@gmail.com>"]
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Siddhesh-Agarwal/cryptmoji"
documentation = "https://github.com/Siddhesh-Agarwal/cryptmoji/wiki"
keywords = ["encryption", "emoji", "cipher", "cryptography", "cryptmoji"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.scripts]
cryptmoji = "cryptmoji.cli:app"

[tool.poetry.dependencies]
python = ">=3.7.0,<4.0"
typer = {extras = ["all"], version = "^0.12.3"}
rich = "^13.7.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
